--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -16,6 +16,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "verbatimModuleSyntax": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
