--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - DATABASE_PORT=3306
       - DATABASE_USER=root
       - DATABASE_PASSWORD=password
-      - DATABASE_NAME=angi_db
+      - DATABASE_NAME=todo_db
     depends_on:
       mysql:
         condition: service_healthy
@@ -22,7 +22,7 @@ services:
     image: mysql:latest
     environment:
       - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=angi_db
+      - MYSQL_DATABASE=todo_db
       - MYSQL_PASSWORD=mypassword
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
@@ -31,8 +31,7 @@ services:
       retries: 5
       start_period: 10s
     volumes:
-      - ./database/mysql_data:/var/lib/mysql
-      - ./database/init_script:/docker-entrypoint-initdb.d
+      - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
     networks:
