--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@react-router/node": "^7.5.2",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.67.3",
