--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=angi_db
+      - MYSQL_USER=myuser
       - MYSQL_PASSWORD=mypassword
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
@@ -30,11 +31,14 @@ services:
       - DATABASE_USER=root
       - DATABASE_PASSWORD=password
       - DATABASE_NAME=angi_db
+      - RETRY_ATTEMPTS=5
+      - RETRY_DELAY=5
     depends_on:
       mysql:
         condition: service_healthy
     networks:
       - app-network
+    restart: on-failure:5
 
 volumes:
   mysql_data: 
