--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "8.0.6",
     "react-router": "^7.5.2",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.4",
     "use-debounce": "^10.0.4"
   },
